--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -246,12 +246,69 @@ nav {
 }
 
 .spotlight-post {
+    clear: both;
     margin-bottom: 4rem;
 }
 
 .spotlight-posttitle {
     margin-bottom: .25rem;
-    font-size: 2.5rem;
+    h2{
+        display: inline-block;
+    }
+}
+
+.spotlight-post-social-links
+{
+    float: right;
+    ul{
+        padding: 0;
+
+        li {
+            display: inline-block;
+            padding: 0;
+            list-style: none;
+        }
+    }
+}
+
+.socialmedia-icon {
+    max-width: 1rem;
+    margin-left: 0.25rem;
+}
+
+.spotlight-icon {
+    display: inline-block;
+    content: "";
+    background-repeat: no-repeat;
+    background-size : 1rem 1rem;
+    width           : 1rem;
+    height          : 1rem;
+}
+
+.blogger-icon::before {
+    @extend .spotlight-icon;
+    background-image: url("data:image/svg+xml,<svg role='img' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><title>Blogger icon</title><path d='M21.976 24H2.026C.9 24 0 23.1 0 21.976V2.026C0 .9.9 0 2.025 0H22.05C23.1 0 24 .9 24 2.025v19.95C24 23.1 23.1 24 21.976 24zM12 3.975H9c-2.775 0-5.025 2.25-5.025 5.025v6c0 2.774 2.25 5.024 5.025 5.024h6c2.774 0 5.024-2.25 5.024-5.024v-3.975c0-.6-.45-1.05-1.05-1.05H18c-.524 0-.976-.45-.976-.976 0-2.776-2.25-5.026-5.024-5.026zm3.074 12H9c-.525 0-.975-.45-.975-.975s.45-.976.975-.976h6.074c.526 0 .977.45.977.976s-.45.976-.975.976zm-2.55-7.95c.527 0 .976.45.976.975s-.45.975-.975.975h-3.6c-.525 0-.976-.45-.976-.975s.45-.975.975-.975h3.6z'/></svg>");
+}
+
+.facebook-icon::before {
+    @extend .spotlight-icon;
+    background-image: url("data:image/svg+xml,<svg role='img' width='1rem' height='1rem' viewBox='0 0 24 24' stroke='%23333' xmlns='http://www.w3.org/2000/svg'><title>Facebook icon</title><path d='M23.9981 11.9991C23.9981 5.37216 18.626 0 11.9991 0C5.37216 0 0 5.37216 0 11.9991C0 17.9882 4.38789 22.9522 10.1242 23.8524V15.4676H7.07758V11.9991H10.1242V9.35553C10.1242 6.34826 11.9156 4.68714 14.6564 4.68714C15.9692 4.68714 17.3424 4.92149 17.3424 4.92149V7.87439H15.8294C14.3388 7.87439 13.8739 8.79933 13.8739 9.74824V11.9991H17.2018L16.6698 15.4676H13.8739V23.8524C19.6103 22.9522 23.9981 17.9882 23.9981 11.9991Z'/></svg>");
+}
+
+.linkedin-icon::before{
+    @extend .spotlight-icon;
+    background-image: url("data:image/svg+xml,<svg role='img' width='1rem' height='1rem' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><title>LinkedIn icon</title><path d='M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z'/></svg>");
+}
+
+
+.pinterest-icon:before {
+    @extend .spotlight-icon;
+    background-image: url("data:image/svg+xml,<svg role='img' width='1rem' height='1rem' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><title>Pinterest icon</title><path d='M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.162-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.401.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.354-.629-2.758-1.379l-.749 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.607 0 11.985-5.365 11.985-11.987C23.97 5.39 18.592.026 11.985.026L12.017 0z'/></svg>");
+}
+
+.twitter-icon::before {
+    @extend .spotlight-icon;
+    background-image: url("data:image/svg+xml,<svg role='mg' width='1rem' height='1rem' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z' /></svg>");
 }
 
 .spotlight-postmeta {
@@ -267,12 +324,27 @@ nav {
     float: left;
 }
 
-/* Prevent Ordered lists slipping in to images. */
 ol {
     display: inline-block;
+    /* Prevent Ordered lists slipping in to post images. */
 }
+
+.spotlight-image-hidden,
+.spotlight-text-hidden {
+    visibility: hidden;
+}
+
+.spotlight-fadein {
+    animation: spotlight-animate-imagefade 2.8s;
+    visibility: visible !important;
+}
+
+@keyframes spotlight-animate-imagefade{
+    0%{opacity:0}
+    100%{opacity:1}
+}
+
 
 .spotlight-pagination {
     margin-bottom: 4rem;
 }
-
